# fireincidents

./: Dockerfile  README.md  pyproject.toml  requirements.txt
src/: scrapper.py
