[tool.poetry]
name = "fireincidents"
version = "0.1.0"
description = "Fire Incidents in San Francisco"
authors = ["Juan Fernando Jaramillo Botero <juanf.jaramillo@opdevel.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlite4 = "^0.1.1"
pandas = "^2.2.3"
sqlalchemy = "^2.0.36"
sodapy = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
